parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    TRANSPUESTA
    DETERMINANTE
    INVERSA
    COMMENT
    THEN
    DO
    WRITE
    READ

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON vars module main
Rule 2     programa -> PROGRAM ID SEMICOLON module main
Rule 3     programa -> PROGRAM ID SEMICOLON vars main
Rule 4     programa -> PROGRAM ID SEMICOLON main
Rule 5     main -> MAIN n_seen_func_name n_seen_main bloque_module
Rule 6     vars -> VAR vars_aux
Rule 7     vars_aux -> ID n_seen_var_name COLON tipo n_set_var_type SEMICOLON vars_aux
Rule 8     vars_aux -> ID n_seen_var_name COLON tipo n_set_var_type DOT
Rule 9     vars_func -> ID n_seen_var_name COLON tipo n_set_var_type COMA vars_func
Rule 10    vars_func -> ID n_seen_var_name COLON tipo n_set_var_type
Rule 11    tipo -> INT n_seen_type
Rule 12    tipo -> FLOAT n_seen_type
Rule 13    tipo -> CHAR n_seen_type
Rule 14    bloque_module -> LBRACKET vars estatuto_aux RBRACKET
Rule 15    bloque_module -> LBRACKET vars RBRACKET
Rule 16    bloque_module -> LBRACKET estatuto_aux RBRACKET
Rule 17    bloque_module -> LBRACKET RBRACKET
Rule 18    bloque -> LBRACKET estatuto_aux RBRACKET
Rule 19    bloque -> LBRACKET RBRACKET
Rule 20    estatuto_aux -> estatuto estatuto_aux
Rule 21    estatuto_aux -> estatuto
Rule 22    estatuto -> asignacion SEMICOLON
Rule 23    estatuto -> condicion SEMICOLON
Rule 24    estatuto -> escritura SEMICOLON
Rule 25    estatuto -> return SEMICOLON
Rule 26    estatuto -> for SEMICOLON
Rule 27    estatuto -> while SEMICOLON
Rule 28    estatuto -> call_module SEMICOLON
Rule 29    asignacion -> ID n_seen_factor_id EQUAL n_add_operator expresion n_assign
Rule 30    expresion -> exp n_gen_and AND n_add_operator expresion
Rule 31    expresion -> exp n_gen_and
Rule 32    exp -> exp_aux n_gen_or OR n_add_operator exp
Rule 33    exp -> exp_aux n_gen_or
Rule 34    exp_aux -> exp_aux2 n_gen_relational GREATERT n_add_operator exp_aux
Rule 35    exp_aux -> exp_aux2 n_gen_relational LESST n_add_operator exp_aux
Rule 36    exp_aux -> exp_aux2 n_gen_relational NOTEQUAL n_add_operator exp_aux
Rule 37    exp_aux -> exp_aux2 n_gen_relational DBEQUALS n_add_operator exp_aux
Rule 38    exp_aux -> exp_aux2 n_gen_relational GREATEREQUAL n_add_operator exp_aux
Rule 39    exp_aux -> exp_aux2 n_gen_relational LESSEQUAL n_add_operator exp_aux
Rule 40    exp_aux -> exp_aux2 n_gen_relational
Rule 41    exp_aux2 -> term n_gen_term PLUS n_add_operator exp_aux2
Rule 42    exp_aux2 -> term n_gen_term MINUS n_add_operator exp_aux2
Rule 43    exp_aux2 -> term n_gen_term
Rule 44    term -> factor n_gen_factor MULTIPLY n_add_operator term
Rule 45    term -> factor n_gen_factor DIVIDE n_add_operator term
Rule 46    term -> factor n_gen_factor
Rule 47    factor -> LPAREN n_push_fake_bottom expresion RPAREN n_pop_fake_bottom
Rule 48    factor -> CTEINT n_seen_factor_int
Rule 49    factor -> CTEF n_seen_factor_float
Rule 50    factor -> CTEC n_seen_factor_char
Rule 51    factor -> ID n_seen_factor_id
Rule 52    module -> MODULE VOID n_seen_type ID n_seen_func_name params bloque_module module
Rule 53    module -> MODULE tipo ID n_seen_func_name params bloque_module module
Rule 54    module -> MODULE VOID n_seen_type ID n_seen_func_name params bloque_module
Rule 55    module -> MODULE tipo ID n_seen_func_name params bloque_module
Rule 56    params -> LPAREN vars_func RPAREN
Rule 57    params -> LPAREN RPAREN
Rule 58    call_module -> ID LPAREN expresion RPAREN
Rule 59    call_module -> ID LPAREN RPAREN
Rule 60    return -> RETURN expresion
Rule 61    for -> FOR asignacion TO CTEINT bloque
Rule 62    while -> WHILE LPAREN expresion RPAREN bloque
Rule 63    condicion -> IF LPAREN expresion RPAREN n_check_exp bloque ELSE n_else bloque n_fill_end
Rule 64    condicion -> IF LPAREN expresion RPAREN n_check_exp bloque n_fill_end
Rule 65    escritura -> PRINT LPAREN escritura_aux RPAREN
Rule 66    escritura_aux -> expresion COMA escritura_aux
Rule 67    escritura_aux -> CTESTRING COMA escritura_aux
Rule 68    escritura_aux -> expresion
Rule 69    escritura_aux -> CTESTRING
Rule 70    n_seen_type -> <empty>
Rule 71    n_seen_var_name -> <empty>
Rule 72    n_seen_func_name -> <empty>
Rule 73    n_set_var_type -> <empty>
Rule 74    n_seen_factor_id -> <empty>
Rule 75    n_seen_factor_int -> <empty>
Rule 76    n_seen_factor_float -> <empty>
Rule 77    n_seen_factor_char -> <empty>
Rule 78    n_assign -> <empty>
Rule 79    n_add_operator -> <empty>
Rule 80    n_gen_term -> <empty>
Rule 81    n_gen_factor -> <empty>
Rule 82    n_gen_relational -> <empty>
Rule 83    n_gen_or -> <empty>
Rule 84    n_gen_and -> <empty>
Rule 85    n_push_fake_bottom -> <empty>
Rule 86    n_pop_fake_bottom -> <empty>
Rule 87    n_check_exp -> <empty>
Rule 88    n_fill_end -> <empty>
Rule 89    n_else -> <empty>
Rule 90    n_seen_main -> <empty>

Terminals, with rules where they appear

AND                  : 30
CHAR                 : 13
COLON                : 7 8 9 10
COMA                 : 9 66 67
COMMENT              : 
CTEC                 : 50
CTEF                 : 49
CTEINT               : 48 61
CTESTRING            : 67 69
DBEQUALS             : 37
DETERMINANTE         : 
DIVIDE               : 45
DO                   : 
DOT                  : 8
ELSE                 : 63
EQUAL                : 29
FLOAT                : 12
FOR                  : 61
GREATEREQUAL         : 38
GREATERT             : 34
ID                   : 1 2 3 4 7 8 9 10 29 51 52 53 54 55 58 59
IF                   : 63 64
INT                  : 11
INVERSA              : 
LBRACKET             : 14 15 16 17 18 19
LESSEQUAL            : 39
LESST                : 35
LPAREN               : 47 56 57 58 59 62 63 64 65
MAIN                 : 5
MINUS                : 42
MODULE               : 52 53 54 55
MULTIPLY             : 44
NOTEQUAL             : 36
OR                   : 32
PLUS                 : 41
PRINT                : 65
PROGRAM              : 1 2 3 4
RBRACKET             : 14 15 16 17 18 19
READ                 : 
RETURN               : 60
RPAREN               : 47 56 57 58 59 62 63 64 65
SEMICOLON            : 1 2 3 4 7 22 23 24 25 26 27 28
THEN                 : 
TO                   : 61
TRANSPUESTA          : 
VAR                  : 6
VOID                 : 52 54
WHILE                : 62
WRITE                : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 22 61
bloque               : 61 62 63 63 64
bloque_module        : 5 52 53 54 55
call_module          : 28
condicion            : 23
escritura            : 24
escritura_aux        : 65 66 67
estatuto             : 20 21
estatuto_aux         : 14 16 18 20
exp                  : 30 31 32
exp_aux              : 32 33 34 35 36 37 38 39
exp_aux2             : 34 35 36 37 38 39 40 41 42
expresion            : 29 30 47 58 60 62 63 64 66 68
factor               : 44 45 46
for                  : 26
main                 : 1 2 3 4
module               : 1 2 52 53
n_add_operator       : 29 30 32 34 35 36 37 38 39 41 42 44 45
n_assign             : 29
n_check_exp          : 63 64
n_else               : 63
n_fill_end           : 63 64
n_gen_and            : 30 31
n_gen_factor         : 44 45 46
n_gen_or             : 32 33
n_gen_relational     : 34 35 36 37 38 39 40
n_gen_term           : 41 42 43
n_pop_fake_bottom    : 47
n_push_fake_bottom   : 47
n_seen_factor_char   : 50
n_seen_factor_float  : 49
n_seen_factor_id     : 29 51
n_seen_factor_int    : 48
n_seen_func_name     : 5 52 53 54 55
n_seen_main          : 5
n_seen_type          : 11 12 13 52 54
n_seen_var_name      : 7 8 9 10
n_set_var_type       : 7 8 9 10
params               : 52 53 54 55
programa             : 0
return               : 25
term                 : 41 42 43 44 45
tipo                 : 7 8 9 10 53 55
vars                 : 1 3 14 15
vars_aux             : 6 7
vars_func            : 9 56
while                : 27

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON vars module main
    (2) programa -> . PROGRAM ID SEMICOLON module main
    (3) programa -> . PROGRAM ID SEMICOLON vars main
    (4) programa -> . PROGRAM ID SEMICOLON main

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SEMICOLON vars module main
    (2) programa -> PROGRAM . ID SEMICOLON module main
    (3) programa -> PROGRAM . ID SEMICOLON vars main
    (4) programa -> PROGRAM . ID SEMICOLON main

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SEMICOLON vars module main
    (2) programa -> PROGRAM ID . SEMICOLON module main
    (3) programa -> PROGRAM ID . SEMICOLON vars main
    (4) programa -> PROGRAM ID . SEMICOLON main

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . vars module main
    (2) programa -> PROGRAM ID SEMICOLON . module main
    (3) programa -> PROGRAM ID SEMICOLON . vars main
    (4) programa -> PROGRAM ID SEMICOLON . main
    (6) vars -> . VAR vars_aux
    (52) module -> . MODULE VOID n_seen_type ID n_seen_func_name params bloque_module module
    (53) module -> . MODULE tipo ID n_seen_func_name params bloque_module module
    (54) module -> . MODULE VOID n_seen_type ID n_seen_func_name params bloque_module
    (55) module -> . MODULE tipo ID n_seen_func_name params bloque_module
    (5) main -> . MAIN n_seen_func_name n_seen_main bloque_module

    VAR             shift and go to state 8
    MODULE          shift and go to state 9
    MAIN            shift and go to state 10

    vars                           shift and go to state 5
    module                         shift and go to state 6
    main                           shift and go to state 7

state 5

    (1) programa -> PROGRAM ID SEMICOLON vars . module main
    (3) programa -> PROGRAM ID SEMICOLON vars . main
    (52) module -> . MODULE VOID n_seen_type ID n_seen_func_name params bloque_module module
    (53) module -> . MODULE tipo ID n_seen_func_name params bloque_module module
    (54) module -> . MODULE VOID n_seen_type ID n_seen_func_name params bloque_module
    (55) module -> . MODULE tipo ID n_seen_func_name params bloque_module
    (5) main -> . MAIN n_seen_func_name n_seen_main bloque_module

    MODULE          shift and go to state 9
    MAIN            shift and go to state 10

    module                         shift and go to state 11
    main                           shift and go to state 12

state 6

    (2) programa -> PROGRAM ID SEMICOLON module . main
    (5) main -> . MAIN n_seen_func_name n_seen_main bloque_module

    MAIN            shift and go to state 10

    main                           shift and go to state 13

state 7

    (4) programa -> PROGRAM ID SEMICOLON main .

    $end            reduce using rule 4 (programa -> PROGRAM ID SEMICOLON main .)


state 8

    (6) vars -> VAR . vars_aux
    (7) vars_aux -> . ID n_seen_var_name COLON tipo n_set_var_type SEMICOLON vars_aux
    (8) vars_aux -> . ID n_seen_var_name COLON tipo n_set_var_type DOT

    ID              shift and go to state 15

    vars_aux                       shift and go to state 14

state 9

    (52) module -> MODULE . VOID n_seen_type ID n_seen_func_name params bloque_module module
    (53) module -> MODULE . tipo ID n_seen_func_name params bloque_module module
    (54) module -> MODULE . VOID n_seen_type ID n_seen_func_name params bloque_module
    (55) module -> MODULE . tipo ID n_seen_func_name params bloque_module
    (11) tipo -> . INT n_seen_type
    (12) tipo -> . FLOAT n_seen_type
    (13) tipo -> . CHAR n_seen_type

    VOID            shift and go to state 16
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20

    tipo                           shift and go to state 17

state 10

    (5) main -> MAIN . n_seen_func_name n_seen_main bloque_module
    (72) n_seen_func_name -> .

    LBRACKET        reduce using rule 72 (n_seen_func_name -> .)

    n_seen_func_name               shift and go to state 21

state 11

    (1) programa -> PROGRAM ID SEMICOLON vars module . main
    (5) main -> . MAIN n_seen_func_name n_seen_main bloque_module

    MAIN            shift and go to state 10

    main                           shift and go to state 22

state 12

    (3) programa -> PROGRAM ID SEMICOLON vars main .

    $end            reduce using rule 3 (programa -> PROGRAM ID SEMICOLON vars main .)


state 13

    (2) programa -> PROGRAM ID SEMICOLON module main .

    $end            reduce using rule 2 (programa -> PROGRAM ID SEMICOLON module main .)


state 14

    (6) vars -> VAR vars_aux .

    MODULE          reduce using rule 6 (vars -> VAR vars_aux .)
    MAIN            reduce using rule 6 (vars -> VAR vars_aux .)
    RBRACKET        reduce using rule 6 (vars -> VAR vars_aux .)
    ID              reduce using rule 6 (vars -> VAR vars_aux .)
    IF              reduce using rule 6 (vars -> VAR vars_aux .)
    PRINT           reduce using rule 6 (vars -> VAR vars_aux .)
    RETURN          reduce using rule 6 (vars -> VAR vars_aux .)
    FOR             reduce using rule 6 (vars -> VAR vars_aux .)
    WHILE           reduce using rule 6 (vars -> VAR vars_aux .)


state 15

    (7) vars_aux -> ID . n_seen_var_name COLON tipo n_set_var_type SEMICOLON vars_aux
    (8) vars_aux -> ID . n_seen_var_name COLON tipo n_set_var_type DOT
    (71) n_seen_var_name -> .

    COLON           reduce using rule 71 (n_seen_var_name -> .)

    n_seen_var_name                shift and go to state 23

state 16

    (52) module -> MODULE VOID . n_seen_type ID n_seen_func_name params bloque_module module
    (54) module -> MODULE VOID . n_seen_type ID n_seen_func_name params bloque_module
    (70) n_seen_type -> .

    ID              reduce using rule 70 (n_seen_type -> .)

    n_seen_type                    shift and go to state 24

state 17

    (53) module -> MODULE tipo . ID n_seen_func_name params bloque_module module
    (55) module -> MODULE tipo . ID n_seen_func_name params bloque_module

    ID              shift and go to state 25


state 18

    (11) tipo -> INT . n_seen_type
    (70) n_seen_type -> .

    ID              reduce using rule 70 (n_seen_type -> .)
    SEMICOLON       reduce using rule 70 (n_seen_type -> .)
    DOT             reduce using rule 70 (n_seen_type -> .)
    COMA            reduce using rule 70 (n_seen_type -> .)
    RPAREN          reduce using rule 70 (n_seen_type -> .)

    n_seen_type                    shift and go to state 26

state 19

    (12) tipo -> FLOAT . n_seen_type
    (70) n_seen_type -> .

    ID              reduce using rule 70 (n_seen_type -> .)
    SEMICOLON       reduce using rule 70 (n_seen_type -> .)
    DOT             reduce using rule 70 (n_seen_type -> .)
    COMA            reduce using rule 70 (n_seen_type -> .)
    RPAREN          reduce using rule 70 (n_seen_type -> .)

    n_seen_type                    shift and go to state 27

state 20

    (13) tipo -> CHAR . n_seen_type
    (70) n_seen_type -> .

    ID              reduce using rule 70 (n_seen_type -> .)
    SEMICOLON       reduce using rule 70 (n_seen_type -> .)
    DOT             reduce using rule 70 (n_seen_type -> .)
    COMA            reduce using rule 70 (n_seen_type -> .)
    RPAREN          reduce using rule 70 (n_seen_type -> .)

    n_seen_type                    shift and go to state 28

state 21

    (5) main -> MAIN n_seen_func_name . n_seen_main bloque_module
    (90) n_seen_main -> .

    LBRACKET        reduce using rule 90 (n_seen_main -> .)

    n_seen_main                    shift and go to state 29

state 22

    (1) programa -> PROGRAM ID SEMICOLON vars module main .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMICOLON vars module main .)


state 23

    (7) vars_aux -> ID n_seen_var_name . COLON tipo n_set_var_type SEMICOLON vars_aux
    (8) vars_aux -> ID n_seen_var_name . COLON tipo n_set_var_type DOT

    COLON           shift and go to state 30


state 24

    (52) module -> MODULE VOID n_seen_type . ID n_seen_func_name params bloque_module module
    (54) module -> MODULE VOID n_seen_type . ID n_seen_func_name params bloque_module

    ID              shift and go to state 31


state 25

    (53) module -> MODULE tipo ID . n_seen_func_name params bloque_module module
    (55) module -> MODULE tipo ID . n_seen_func_name params bloque_module
    (72) n_seen_func_name -> .

    LPAREN          reduce using rule 72 (n_seen_func_name -> .)

    n_seen_func_name               shift and go to state 32

state 26

    (11) tipo -> INT n_seen_type .

    ID              reduce using rule 11 (tipo -> INT n_seen_type .)
    SEMICOLON       reduce using rule 11 (tipo -> INT n_seen_type .)
    DOT             reduce using rule 11 (tipo -> INT n_seen_type .)
    COMA            reduce using rule 11 (tipo -> INT n_seen_type .)
    RPAREN          reduce using rule 11 (tipo -> INT n_seen_type .)


state 27

    (12) tipo -> FLOAT n_seen_type .

    ID              reduce using rule 12 (tipo -> FLOAT n_seen_type .)
    SEMICOLON       reduce using rule 12 (tipo -> FLOAT n_seen_type .)
    DOT             reduce using rule 12 (tipo -> FLOAT n_seen_type .)
    COMA            reduce using rule 12 (tipo -> FLOAT n_seen_type .)
    RPAREN          reduce using rule 12 (tipo -> FLOAT n_seen_type .)


state 28

    (13) tipo -> CHAR n_seen_type .

    ID              reduce using rule 13 (tipo -> CHAR n_seen_type .)
    SEMICOLON       reduce using rule 13 (tipo -> CHAR n_seen_type .)
    DOT             reduce using rule 13 (tipo -> CHAR n_seen_type .)
    COMA            reduce using rule 13 (tipo -> CHAR n_seen_type .)
    RPAREN          reduce using rule 13 (tipo -> CHAR n_seen_type .)


state 29

    (5) main -> MAIN n_seen_func_name n_seen_main . bloque_module
    (14) bloque_module -> . LBRACKET vars estatuto_aux RBRACKET
    (15) bloque_module -> . LBRACKET vars RBRACKET
    (16) bloque_module -> . LBRACKET estatuto_aux RBRACKET
    (17) bloque_module -> . LBRACKET RBRACKET

    LBRACKET        shift and go to state 34

    bloque_module                  shift and go to state 33

state 30

    (7) vars_aux -> ID n_seen_var_name COLON . tipo n_set_var_type SEMICOLON vars_aux
    (8) vars_aux -> ID n_seen_var_name COLON . tipo n_set_var_type DOT
    (11) tipo -> . INT n_seen_type
    (12) tipo -> . FLOAT n_seen_type
    (13) tipo -> . CHAR n_seen_type

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20

    tipo                           shift and go to state 35

state 31

    (52) module -> MODULE VOID n_seen_type ID . n_seen_func_name params bloque_module module
    (54) module -> MODULE VOID n_seen_type ID . n_seen_func_name params bloque_module
    (72) n_seen_func_name -> .

    LPAREN          reduce using rule 72 (n_seen_func_name -> .)

    n_seen_func_name               shift and go to state 36

state 32

    (53) module -> MODULE tipo ID n_seen_func_name . params bloque_module module
    (55) module -> MODULE tipo ID n_seen_func_name . params bloque_module
    (56) params -> . LPAREN vars_func RPAREN
    (57) params -> . LPAREN RPAREN

    LPAREN          shift and go to state 38

    params                         shift and go to state 37

state 33

    (5) main -> MAIN n_seen_func_name n_seen_main bloque_module .

    $end            reduce using rule 5 (main -> MAIN n_seen_func_name n_seen_main bloque_module .)


state 34

    (14) bloque_module -> LBRACKET . vars estatuto_aux RBRACKET
    (15) bloque_module -> LBRACKET . vars RBRACKET
    (16) bloque_module -> LBRACKET . estatuto_aux RBRACKET
    (17) bloque_module -> LBRACKET . RBRACKET
    (6) vars -> . VAR vars_aux
    (20) estatuto_aux -> . estatuto estatuto_aux
    (21) estatuto_aux -> . estatuto
    (22) estatuto -> . asignacion SEMICOLON
    (23) estatuto -> . condicion SEMICOLON
    (24) estatuto -> . escritura SEMICOLON
    (25) estatuto -> . return SEMICOLON
    (26) estatuto -> . for SEMICOLON
    (27) estatuto -> . while SEMICOLON
    (28) estatuto -> . call_module SEMICOLON
    (29) asignacion -> . ID n_seen_factor_id EQUAL n_add_operator expresion n_assign
    (63) condicion -> . IF LPAREN expresion RPAREN n_check_exp bloque ELSE n_else bloque n_fill_end
    (64) condicion -> . IF LPAREN expresion RPAREN n_check_exp bloque n_fill_end
    (65) escritura -> . PRINT LPAREN escritura_aux RPAREN
    (60) return -> . RETURN expresion
    (61) for -> . FOR asignacion TO CTEINT bloque
    (62) while -> . WHILE LPAREN expresion RPAREN bloque
    (58) call_module -> . ID LPAREN expresion RPAREN
    (59) call_module -> . ID LPAREN RPAREN

    RBRACKET        shift and go to state 41
    VAR             shift and go to state 8
    ID              shift and go to state 50
    IF              shift and go to state 51
    PRINT           shift and go to state 52
    RETURN          shift and go to state 53
    FOR             shift and go to state 54
    WHILE           shift and go to state 55

    vars                           shift and go to state 39
    estatuto_aux                   shift and go to state 40
    estatuto                       shift and go to state 42
    asignacion                     shift and go to state 43
    condicion                      shift and go to state 44
    escritura                      shift and go to state 45
    return                         shift and go to state 46
    for                            shift and go to state 47
    while                          shift and go to state 48
    call_module                    shift and go to state 49

state 35

    (7) vars_aux -> ID n_seen_var_name COLON tipo . n_set_var_type SEMICOLON vars_aux
    (8) vars_aux -> ID n_seen_var_name COLON tipo . n_set_var_type DOT
    (73) n_set_var_type -> .

    SEMICOLON       reduce using rule 73 (n_set_var_type -> .)
    DOT             reduce using rule 73 (n_set_var_type -> .)

    n_set_var_type                 shift and go to state 56

state 36

    (52) module -> MODULE VOID n_seen_type ID n_seen_func_name . params bloque_module module
    (54) module -> MODULE VOID n_seen_type ID n_seen_func_name . params bloque_module
    (56) params -> . LPAREN vars_func RPAREN
    (57) params -> . LPAREN RPAREN

    LPAREN          shift and go to state 38

    params                         shift and go to state 57

state 37

    (53) module -> MODULE tipo ID n_seen_func_name params . bloque_module module
    (55) module -> MODULE tipo ID n_seen_func_name params . bloque_module
    (14) bloque_module -> . LBRACKET vars estatuto_aux RBRACKET
    (15) bloque_module -> . LBRACKET vars RBRACKET
    (16) bloque_module -> . LBRACKET estatuto_aux RBRACKET
    (17) bloque_module -> . LBRACKET RBRACKET

    LBRACKET        shift and go to state 34

    bloque_module                  shift and go to state 58

state 38

    (56) params -> LPAREN . vars_func RPAREN
    (57) params -> LPAREN . RPAREN
    (9) vars_func -> . ID n_seen_var_name COLON tipo n_set_var_type COMA vars_func
    (10) vars_func -> . ID n_seen_var_name COLON tipo n_set_var_type

    RPAREN          shift and go to state 60
    ID              shift and go to state 61

    vars_func                      shift and go to state 59

state 39

    (14) bloque_module -> LBRACKET vars . estatuto_aux RBRACKET
    (15) bloque_module -> LBRACKET vars . RBRACKET
    (20) estatuto_aux -> . estatuto estatuto_aux
    (21) estatuto_aux -> . estatuto
    (22) estatuto -> . asignacion SEMICOLON
    (23) estatuto -> . condicion SEMICOLON
    (24) estatuto -> . escritura SEMICOLON
    (25) estatuto -> . return SEMICOLON
    (26) estatuto -> . for SEMICOLON
    (27) estatuto -> . while SEMICOLON
    (28) estatuto -> . call_module SEMICOLON
    (29) asignacion -> . ID n_seen_factor_id EQUAL n_add_operator expresion n_assign
    (63) condicion -> . IF LPAREN expresion RPAREN n_check_exp bloque ELSE n_else bloque n_fill_end
    (64) condicion -> . IF LPAREN expresion RPAREN n_check_exp bloque n_fill_end
    (65) escritura -> . PRINT LPAREN escritura_aux RPAREN
    (60) return -> . RETURN expresion
    (61) for -> . FOR asignacion TO CTEINT bloque
    (62) while -> . WHILE LPAREN expresion RPAREN bloque
    (58) call_module -> . ID LPAREN expresion RPAREN
    (59) call_module -> . ID LPAREN RPAREN

    RBRACKET        shift and go to state 63
    ID              shift and go to state 50
    IF              shift and go to state 51
    PRINT           shift and go to state 52
    RETURN          shift and go to state 53
    FOR             shift and go to state 54
    WHILE           shift and go to state 55

    estatuto_aux                   shift and go to state 62
    estatuto                       shift and go to state 42
    asignacion                     shift and go to state 43
    condicion                      shift and go to state 44
    escritura                      shift and go to state 45
    return                         shift and go to state 46
    for                            shift and go to state 47
    while                          shift and go to state 48
    call_module                    shift and go to state 49

state 40

    (16) bloque_module -> LBRACKET estatuto_aux . RBRACKET

    RBRACKET        shift and go to state 64


state 41

    (17) bloque_module -> LBRACKET RBRACKET .

    $end            reduce using rule 17 (bloque_module -> LBRACKET RBRACKET .)
    MODULE          reduce using rule 17 (bloque_module -> LBRACKET RBRACKET .)
    MAIN            reduce using rule 17 (bloque_module -> LBRACKET RBRACKET .)


state 42

    (20) estatuto_aux -> estatuto . estatuto_aux
    (21) estatuto_aux -> estatuto .
    (20) estatuto_aux -> . estatuto estatuto_aux
    (21) estatuto_aux -> . estatuto
    (22) estatuto -> . asignacion SEMICOLON
    (23) estatuto -> . condicion SEMICOLON
    (24) estatuto -> . escritura SEMICOLON
    (25) estatuto -> . return SEMICOLON
    (26) estatuto -> . for SEMICOLON
    (27) estatuto -> . while SEMICOLON
    (28) estatuto -> . call_module SEMICOLON
    (29) asignacion -> . ID n_seen_factor_id EQUAL n_add_operator expresion n_assign
    (63) condicion -> . IF LPAREN expresion RPAREN n_check_exp bloque ELSE n_else bloque n_fill_end
    (64) condicion -> . IF LPAREN expresion RPAREN n_check_exp bloque n_fill_end
    (65) escritura -> . PRINT LPAREN escritura_aux RPAREN
    (60) return -> . RETURN expresion
    (61) for -> . FOR asignacion TO CTEINT bloque
    (62) while -> . WHILE LPAREN expresion RPAREN bloque
    (58) call_module -> . ID LPAREN expresion RPAREN
    (59) call_module -> . ID LPAREN RPAREN

    RBRACKET        reduce using rule 21 (estatuto_aux -> estatuto .)
    ID              shift and go to state 50
    IF              shift and go to state 51
    PRINT           shift and go to state 52
    RETURN          shift and go to state 53
    FOR             shift and go to state 54
    WHILE           shift and go to state 55

    estatuto                       shift and go to state 42
    estatuto_aux                   shift and go to state 65
    asignacion                     shift and go to state 43
    condicion                      shift and go to state 44
    escritura                      shift and go to state 45
    return                         shift and go to state 46
    for                            shift and go to state 47
    while                          shift and go to state 48
    call_module                    shift and go to state 49

state 43

    (22) estatuto -> asignacion . SEMICOLON

    SEMICOLON       shift and go to state 66


state 44

    (23) estatuto -> condicion . SEMICOLON

    SEMICOLON       shift and go to state 67


state 45

    (24) estatuto -> escritura . SEMICOLON

    SEMICOLON       shift and go to state 68


state 46

    (25) estatuto -> return . SEMICOLON

    SEMICOLON       shift and go to state 69


state 47

    (26) estatuto -> for . SEMICOLON

    SEMICOLON       shift and go to state 70


state 48

    (27) estatuto -> while . SEMICOLON

    SEMICOLON       shift and go to state 71


state 49

    (28) estatuto -> call_module . SEMICOLON

    SEMICOLON       shift and go to state 72


state 50

    (29) asignacion -> ID . n_seen_factor_id EQUAL n_add_operator expresion n_assign
    (58) call_module -> ID . LPAREN expresion RPAREN
    (59) call_module -> ID . LPAREN RPAREN
    (74) n_seen_factor_id -> .

    LPAREN          shift and go to state 74
    EQUAL           reduce using rule 74 (n_seen_factor_id -> .)

    n_seen_factor_id               shift and go to state 73

state 51

    (63) condicion -> IF . LPAREN expresion RPAREN n_check_exp bloque ELSE n_else bloque n_fill_end
    (64) condicion -> IF . LPAREN expresion RPAREN n_check_exp bloque n_fill_end

    LPAREN          shift and go to state 75


state 52

    (65) escritura -> PRINT . LPAREN escritura_aux RPAREN

    LPAREN          shift and go to state 76


state 53

    (60) return -> RETURN . expresion
    (30) expresion -> . exp n_gen_and AND n_add_operator expresion
    (31) expresion -> . exp n_gen_and
    (32) exp -> . exp_aux n_gen_or OR n_add_operator exp
    (33) exp -> . exp_aux n_gen_or
    (34) exp_aux -> . exp_aux2 n_gen_relational GREATERT n_add_operator exp_aux
    (35) exp_aux -> . exp_aux2 n_gen_relational LESST n_add_operator exp_aux
    (36) exp_aux -> . exp_aux2 n_gen_relational NOTEQUAL n_add_operator exp_aux
    (37) exp_aux -> . exp_aux2 n_gen_relational DBEQUALS n_add_operator exp_aux
    (38) exp_aux -> . exp_aux2 n_gen_relational GREATEREQUAL n_add_operator exp_aux
    (39) exp_aux -> . exp_aux2 n_gen_relational LESSEQUAL n_add_operator exp_aux
    (40) exp_aux -> . exp_aux2 n_gen_relational
    (41) exp_aux2 -> . term n_gen_term PLUS n_add_operator exp_aux2
    (42) exp_aux2 -> . term n_gen_term MINUS n_add_operator exp_aux2
    (43) exp_aux2 -> . term n_gen_term
    (44) term -> . factor n_gen_factor MULTIPLY n_add_operator term
    (45) term -> . factor n_gen_factor DIVIDE n_add_operator term
    (46) term -> . factor n_gen_factor
    (47) factor -> . LPAREN n_push_fake_bottom expresion RPAREN n_pop_fake_bottom
    (48) factor -> . CTEINT n_seen_factor_int
    (49) factor -> . CTEF n_seen_factor_float
    (50) factor -> . CTEC n_seen_factor_char
    (51) factor -> . ID n_seen_factor_id

    LPAREN          shift and go to state 83
    CTEINT          shift and go to state 84
    CTEF            shift and go to state 85
    CTEC            shift and go to state 86
    ID              shift and go to state 87

    expresion                      shift and go to state 77
    exp                            shift and go to state 78
    exp_aux                        shift and go to state 79
    exp_aux2                       shift and go to state 80
    term                           shift and go to state 81
    factor                         shift and go to state 82

state 54

    (61) for -> FOR . asignacion TO CTEINT bloque
    (29) asignacion -> . ID n_seen_factor_id EQUAL n_add_operator expresion n_assign

    ID              shift and go to state 89

    asignacion                     shift and go to state 88

state 55

    (62) while -> WHILE . LPAREN expresion RPAREN bloque

    LPAREN          shift and go to state 90


state 56

    (7) vars_aux -> ID n_seen_var_name COLON tipo n_set_var_type . SEMICOLON vars_aux
    (8) vars_aux -> ID n_seen_var_name COLON tipo n_set_var_type . DOT

    SEMICOLON       shift and go to state 91
    DOT             shift and go to state 92


state 57

    (52) module -> MODULE VOID n_seen_type ID n_seen_func_name params . bloque_module module
    (54) module -> MODULE VOID n_seen_type ID n_seen_func_name params . bloque_module
    (14) bloque_module -> . LBRACKET vars estatuto_aux RBRACKET
    (15) bloque_module -> . LBRACKET vars RBRACKET
    (16) bloque_module -> . LBRACKET estatuto_aux RBRACKET
    (17) bloque_module -> . LBRACKET RBRACKET

    LBRACKET        shift and go to state 34

    bloque_module                  shift and go to state 93

state 58
